[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-oi-momentum"
version = "0.1.0"
description = "Research, backtest, paper trade, and live trade a Binance futures OI momentum strategy."
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9",
  "pandas>=2.2",
  "PyYAML>=6.0",
  "requests>=2.31",
  "streamlit>=1.37",
  "python-socks[asyncio]>=2.4",
  "websockets>=12.0",
]

[project.scripts]
oi-momentum-scan = "binance_oi_momentum.cli:run_scanner"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
